mano-cli/tests/snapshots/cli__repl_errors_use_ariadne_format.snap
---
source: mano-cli/tests/cli.rs
expression: stderr_clean
---
Error: Tá moscando, Brown?
   ╭─[ :1:1 ]
   │
 1 │ @
   │ ┬  
   │ ╰── E esse '@' aí, truta?
───╯
